force-app/main/default/objects/Warranty_Claim__c/fields/Asset_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Asset_Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Warranty</label>
    <referenceTo>Asset_Warranty__c</referenceTo>
    <relationshipLabel>Warranty Claims</relationshipLabel>
    <relationshipName>Warranty_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>