force-app/main/default/objects/Warranty_Claim__c/fields/Eligibility_Status__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Status__c</fullName>
    <label>Eligibility Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
                <default>true</default>
                <label>Eligible</label>
            </value>
            <value>
                <fullName>Out of Warranty</fullName>
            </value>
            <value>
                <fullName>Pending Documents</fullName>
            </value>
            <value>
                <fullName>Manual Review</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>