force-app/main/default/objects/Warranty_Claim__c/fields/Has_Liquid_Damage__c.field-meta.xml
<CustomField>
    <fullName>Has_Liquid_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Liquid Damage</label>
    <type>Checkbox</type>
</CustomField>