force-app/main/default/objects/Warranty_Claim__c/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Display</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Charging</fullName>
                <default>true</default>
                <label>Charging</label>
            </value>
            <value>
                <fullName>Overheating</fullName>
            </value>
            <value>
                <fullName>Motherboard</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Physical Damage</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>