force-app/main/default/objects/Warranty_Claim__c/fields/Safety_Risk__c.field-meta.xml
<CustomField>
    <fullName>Safety_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Safety Risk</label>
    <type>Checkbox</type>
</CustomField>