force-app/main/default/objects/Warranty_Claim__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web Chat</fullName>
                <default>true</default>
                <label>Web Chat</label>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Agentforce</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>