force-app/main/default/objects/Warranty_Claim__c/fields/Triage_Score__c.field-meta.xml
<CustomField>
    <fullName>Triage_Score__c</fullName>
    <label>Triage Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>